# qn-enh-sdk

./: .gitignore  README.md  to_ffmpeg.py
doc/: 注意事项.txt
proj-qndeblock-filter/: CMakeLists.txt  proj-qndeblock-filter.vcxproj  proj-qndeblock-filter.vcxproj.filters
proj-qndeblock-filter/include/: qndeblock-sdk.h
proj-qndeblock-filter/models/: nir10_best.onnx
proj-qndeblock-filter/qndeblock-lib/: qndeblock-lib.vcxproj  qndeblock-lib.vcxproj.filters
proj-qndeblock-filter/src/: qndeblock-sdk.cpp  qndeblock.cpp  qndeblock.h
proj-qndeblock-filter/test/: test.c  test2.cpp  test2.h
proj-qnfilter/: CMakeLists.txt  proj-qnfilter.sln  proj-qnfilter.vcxproj  proj-qnfilter.vcxproj.filters  readme.txt
proj-qnfilter/include/: qnfilter-basedef.h  qnfilter-sdk.h
proj-qnfilter/qnfilter-lib/: qnfilter-lib.vcxproj  qnfilter-lib.vcxproj.filters
proj-qnfilter/src/: qnfilter-sdk.cpp  qnfilter.cpp  qnfilter.h  utils-mt.cpp  utils-mt.h
proj-qnfilter/test/: test.c  test2.cpp  test2.h
scripts/: myconf.bat
src/libavfilter/: Makefile  allfilters.c  vf_qndeblock.c  vf_qnfilter.c
vcproj/: qn-enh-sdk.vcxproj  qn-enh-sdk.vcxproj.filters
